--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,5 +1,18 @@
 <!-- start custom head snippets -->
 
+  <style>
+    .superscript {
+      font-size: 0.45em;
+      position: relative;
+      top: -0.5em;
+    }
+    .shortscript {
+      font-size: 0.85em;
+      position: relative;
+      left: 0.5em;
+    }
+  </style>
+
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
 
 <!-- end custom head snippets -->
