--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -47,7 +47,7 @@ layout: default
           </aside>
         {% endif %}
         {{ content }}
-        {% if page.link %}<div><a href="{{ page.link }}" class="btn btn--primary">{{ site.data.ui-text[site.locale].ext_link_label | default: "Direct Link" }}</a></div>{% endif %}
+        {% if page.link %}<div><a href="{{ page.link }}" class="btn btn--primary">{{ site.data.ui-text[site.locale].ext_link_label | default: "Source" }}</a></div>{% endif %}
       </section>
 
       <footer class="page__meta">
@@ -56,6 +56,7 @@ layout: default
         {% endif %}
         {% include page__taxonomy.html %}
         {% include page__date.html %}
+        {% include page__permalink.html %}
       </footer>
 
       {% if page.share %}{% include social-share.html %}{% endif %}
